ansible/playbooks/roles/minikube/files/kubernetes/services.yaml
apiVersion: v1
kind: Service

metadata:
  name: sre-challenge-service

spec:
  selector:
    app: sre-challenge

  ports:
    - port: 80
      targetPort: 5000
